# yesod-app

./: .gitignore  README.md  package.yaml  shell-app.nix  shell.nix  stack.yaml  yesod-app.cabal
app/: Main.hs
