cabal-version: 2.2

name:           yesod-app
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/yesod-app#readme>
homepage:       https://github.com/kczulko/yesod-app#readme
bug-reports:    https://github.com/kczulko/yesod-app/issues
author:         kczulko
maintainer:     karol.czulkowski@gmail.com
copyright:      2020 kczulko
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/kczulko/yesod-app

common shared-build-config
  build-depends:
      aeson
    , base >=4.7 && <5
    , persistent
    , persistent-postgresql
    , persistent-template
    , text
    , yesod
    , yesod-core
  default-language: Haskell2010       
  
library
  import: shared-build-config
  exposed-modules:
      Lib
  other-modules:
      Paths_yesod_app
  hs-source-dirs:
      src

executable yesod-app-exe
  import: shared-build-config
  main-is: Main.hs
  other-modules:
      Paths_yesod_app
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite yesod-app-test
  import: shared-build-config
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_yesod_app
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
